# linal_routines

./: .gitignore  CMakeLists.txt  README.md
examples/: cos_sim.c  mat_mul_matrix.c
examples/matrices/: matrix_1.txt  matrix_2.txt
src/: CMakeLists.txt  matrix.c  utils.c  vector.c
src/linal_routines/: CMakeLists.txt  matrix.c  matrix.h  point.c  point.h  utils.c  utils.h  vector.c  vector.h
